--- a/JNITest/src/main/res/layout/activity_main.xml
+++ b/JNITest/src/main/res/layout/activity_main.xml
@@ -19,6 +19,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/bt_say_hi"
+        android:text="get string from JNI by Dynamic registration"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/tv_show_jnistring"
         android:layout_width="wrap_content"
